[package]
name = "torrust-actix"
version = "4.0.15"
edition = "2024"
license = "AGPL-3.0"
authors = [
    "Jasper Lingers <info@power2all.com>",
    "Mick van Dijke <mick@dutchbits.nl>"
]
description = "A rich, fast and efficient Bittorrent Tracker."

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = "debuginfo"

[dependencies]
actix-cors = "^0.7"
actix-web = { version = "^4", features = ["rustls-0_23"] }
async-std = "^1"
binascii = "^0.1"
bip_bencode = "^0.4"
byteorder = "^1.5"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive"] }
fern = { version = "^0.7", features = ["colored"] }
futures-util = "^0.3"
hex = "^0.4"
log = "^0.4"
parking_lot = { version = "^0.12", features = ["arc_lock", "hardware-lock-elision", "serde", "deadlock_detection"] }
percent-encoding = "^2.3"
rcgen = "^0.14"
regex = "^1.11"
rustls = { version = "^0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "^2.2"
sentry = { version = "^0.46", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "transport", "debug-images", "reqwest"] }
sentry-actix = "^0.46"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde_millis = "^0.1"
sha1 = "^0.10"
socket2 = "^0.6"
sqlx = { version = "^0.8", features = ["mysql", "postgres", "sqlite", "runtime-tokio-rustls"] }
thiserror = "^2.0"
tokio = { version = "^1.47", features = ["full"] }
tokio-shutdown = "^0.1"
toml = "^0.9"
tracing = "^0.1"
utoipa-swagger-ui = { version = "^9", features = ["actix-web"] }
lazy_static = "^1.5"
crossbeam = "0.8.4"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
