[workspace]
members = ["."]
default-members = ["."]
resolver = "3"

[package]
name = "torrust-actix"
version = "4.2.9"
edition = "2024"
license = "MIT"
authors = ["Power2All <info@power2all.com>"]
description = "A rich, fast and efficient Bittorrent Tracker."
homepage = "https://www.torrust-actix.com"
repository = "https://github.com/Power2All/torrust-actix"
documentation = "https://docs.rs/torrust-actix"
readme = "README.md"
keywords = ["bittorrent", "tracker", "actix", "rtctorrent", "webrtc"]
categories = ["network-programming", "web-programming::http-server"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = { version = "4.13.0", features = ["rustls-0_23", "compress-gzip"] }
actix-web-actors = "4.3.1"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
rmp-serde = "1.3.1"
once_cell = "1.21.4"
uuid = { version = "1.23.1", features = ["v4"] }
async-std = "1.13.2"
binascii = "0.1.4"
bip_bencode = "0.4.4"
byteorder = "1.5.0"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
futures-util = "0.3.32"
hex = "0.4.3"
log = "0.4.29"
parking_lot = { version = "0.12.5", features = ["arc_lock", "hardware-lock-elision", "serde", "deadlock_detection"] }
percent-encoding = "2.3.2"
rcgen = "0.14.7"
regex = "1.12.3"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2.0"
sentry = { version = "0.48.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "transport", "debug-images", "reqwest"] }
sentry-actix = "0.48.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_millis = "0.1.1"
sha1 = "0.11.0"
socket2 = "0.6.3"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1.89"
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }
memcache = { version = "0.19.0", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
rand = "0.10.1"
base64 = "0.22.1"
tokio-shutdown = "0.1.5"
toml = "1.1.2"
tracing = "0.1.44"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
lazy_static = "1.5.0"
crossbeam = "0.8.4"
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }
ahash = "0.8.12"
lz4_flex = { version = "0.13.0", default-features = false }
zstd = { version = "0.13.3", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
mockall = "0.14.0"
proptest = "1.11.0"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[[bench]]
name = "tracker_benchmarks"
harness = false

[package.metadata.bundle]
name = "Torrust Actix"
identifier = "com.power2all.torrust-actix"
icon = ["icon.ico"]
version = "4.2.9"
copyright = "Copyright (c) 2024-2026 Power2All"
category = "Public Utility"
short_description = "BitTorrent Tracker"
long_description = "A rich, fast and efficient Bittorrent Tracker."