[package]
name = "bt-seed"
version = "4.2.0"
edition = "2024"
description = "Native Rust BitTorrent seeder for torrust-actix — standard BT wire protocol, no WebRTC required."
authors = ["Jasper Lingers <info@power2all.com>"]

[[bin]]
name = "bt-seed"
path = "src/main.rs"

[dependencies]
sha1 = { version = "^0.10", features = ["std"] }
sha2 = { version = "^0.10", features = ["std"] }
bip_bencode = "^0.4"
hex = "^0.4"
percent-encoding = "^2.3"
reqwest = { version = "^0.13", default-features = false, features = ["rustls"] }
tokio = { version = "^1", features = ["full"] }
clap = { version = "^4", features = ["derive"] }
rand = "^0.10"
log = "^0.4"
fern = { version = "^0.7", features = ["colored"] }
chrono = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_yaml = "^0.9"
