[package]
name = "torrust-client"
version = "4.2.0"
edition = "2024"
description = "Native cross-platform GUI client for torrust-actix."
authors = ["Jasper Lingers <info@power2all.com>"]

[[bin]]
name = "torrust-client"
path = "src/main.rs"

[build-dependencies]
slint-build = "1"

[dependencies]
slint = "1"
